--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,6 +25,8 @@ language: nl
 publisher: Project Gutenberg
 rights: Public domain in the USA.
 rights_url: http://creativecommons.org/about/pdm
+subjects:
+- GITenberg
 title: 'Naakt model
 
   Toneelspel in drie bedrijven'
